
syntax = "proto3";

package ga4gh;

// Import HTTP RESTful annotations
// from github.com/googleapis/googleapis
import "google/api/annotations.proto";

import "data_objects.proto";


// Web service to get, create, list and delete Data Objects
service DataObjectService {

  // Make a new Data Object
  rpc GetDataObject(GetDataObjectRequest) returns (GetDataObjectResponse) {
    option (google.api.http) = {
      get: "/ga4gh/dos/v1/dataobjects/{data_object_id}"
    };
  }

  // Make a new Data Object
  rpc CreateDataObject(CreateDataObjectRequest) returns (CreateDataObjectResponse) {
    option (google.api.http) = {
      post: "/ga4gh/dos/v1/dataobjects"
      body: "*"
    };
  }


  // Delete a Data Object index entry.
  rpc DeleteDataObject(DeleteDataObjectRequest) returns (DeleteDataObjectResponse) {
      option (google.api.http) = {
        delete: "/ga4gh/dos/v1/dataobjects/{data_object_id}"
      };
  }

  // Update a Data Object
  rpc UpdateDataObject(UpdateDataObjectRequest) returns (UpdateDataObjectResponse) {
    option (google.api.http) = {
      put: "/ga4gh/dos/v1/dataobjects/{data_object_id}"
      body: "*"
    };
  }

  // List the Data Objects.
  rpc ListDataObjects(ListDataObjectsRequest) returns (ListDataObjectsResponse) {
    option (google.api.http) = {
      get: "/ga4gh/dos/v1/dataobjects/list"
    };
  }

  // Create a new Data Bundle.
  rpc CreateDataBundle(CreateDataBundleRequest) returns (CreateDataBundleResponse) {
    option (google.api.http) = {
      post: "/ga4gh/dos/v1/databundles/{data_bundle_id}"
      body: "*"
    };
  }

  // Delete a Data Bundle
  rpc GetDataBundle(GetDataBundleRequest) returns (GetDataBundleResponse) {
      option (google.api.http) = {
        delete: "/ga4gh/dos/v1/databundles/{data_bundle_id}"
      };
  }

  // Update a Data Bundle
  rpc UpdateDataBundle(UpdateDataBundleRequest) returns (UpdateDataBundleResponse) {
    option (google.api.http) = {
      put: "/ga4gh/dos/v1/databundles/{data_bundle_id}"
      body: "*"
    };
  }

  // Delete a Data Bundle
  rpc DeleteDataBundle(DeleteDataBundleRequest) returns (DeleteDataBundleResponse) {
      option (google.api.http) = {
        delete: "/ga4gh/dos/v1/databundles/{data_bundle_id}"
      };
  }

  // List the Data Bundles
  rpc ListDataBundles(ListDataBundlesRequest) returns (ListDataBundlesResponse) {
    option (google.api.http) = {
      get: "/ga4gh/dos/v1/databundles/list"
    };
  }
}

///-------------------------------------------------------------------
// A request to list all objects in a dataset
///-------------------------------------------------------------------
message ListDataObjectsRequest {
  // OPTIONAL
  string name_prefix = 1;

  // OPTIONAL
  // If provided will only return data object messages with the provided
  // checksum.
  string checksum = 2;

  // OPTIONAL
  // Specifies the maximum number of results to return in a single page.
  // If unspecified, a system default will be used.
  int32 page_size = 4;

  // OPTIONAL
  // The continuation token, which is used to page through large result sets.
  // To get the next page of results, set this parameter to the value of
  // `next_page_token` from the previous response.
  string page_token = 5;

}

///-------------------------------------------------------------------
// A list of data objects
///-------------------------------------------------------------------
message ListDataObjectsResponse {
  // The list of Data Objects.
  repeated DataObject dataobjects = 1;

  // The continuation token, which is used to page through large result sets.
  // Provide this value in a subsequent request to return the next page of
  // results. This field will be empty if there aren't any additional results.
  string next_page_token = 2;
}

message CreateDataObjectRequest {
  // REQUIRED
  // The Data Object one would like to index. One must provide any aliases
  // and URLs to this file when sending the CreateDataObjectRequest. It is up
  // to implementations to validate that the Data Object is available from
  // the provided URLs.
  DataObject data_object = 1;
}

message CreateDataObjectResponse {
  // The ID of the created Data Object.
  string data_object_id = 1;
}

message GetDataObjectRequest {
  // REQUIRED
  // The unique identifier for the requested data object.
  string data_object_id = 1;

  // OPTIONAL
  string version = 2;
}

message GetDataObjectResponse {
  // REQUIRED
  // The Data Object that coincides with a specific GetDataObjectRequest.
  DataObject data_object = 1;
}

message UpdateDataObjectRequest {
  string data_object_id = 1;
}

message UpdateDataObjectResponse {
  string data_object_id = 1;
}

message DeleteDataObjectRequest {
  string data_object_id = 1;
}

message DeleteDataObjectResponse {
  string data_object_id = 1;
}

// Bundles
message ListDataBundlesRequest {
  // OPTIONAL
  string id = 1;

  // OPTIONAL
  // If provided, will only return Data Bundles which have the provided
  // checksum.
  string checksum = 2;

  // OPTIONAL
  // Specifies the maximum number of results to return in a single page.
  // If unspecified, a system default will be used.
  int32 page_size = 5;

  // OPTIONAL
  // The continuation token, which is used to page through large result sets.
  // To get the next page of results, set this parameter to the value of
  // `next_page_token` from the previous response.
  string page_token = 6;

}

message ListDataBundlesResponse {
  // The list of Data Bundles.
  repeated DataBundle data_bundle_objects = 1;

  // The continuation token, which is used to page through large result sets.
  // Provide this value in a subsequent request to return the next page of
  // results. This field will be empty if there aren't any additional results.
  string next_page_token = 2;
}

message CreateDataBundleRequest {
  string data_bundle_id = 1;
}

message CreateDataBundleResponse {
  string data_bundle_id = 1;
}

message GetDataBundleRequest {
  string data_bundle_id = 1;
}

message GetDataBundleResponse {
  DataBundle data_bundle = 1;
}

message DeleteDataBundleRequest {
  string data_bundle_id = 1;
}

message DeleteDataBundleResponse {
  string data_bundle_id = 1;
}

message UpdateDataBundleRequest {
  string data_bundle_id = 1;
}

message UpdateDataBundleResponse {
  string data_bundle_id = 1;
}
